# VulkanContinuum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/models/Square Character/: Square Character.mtl
res/scenes/: defaultScene.json
res/shaders/: _  basic_shader.frag  basic_shader.vert  compile.bat  frag.frag  glTFfrag.frag  glTFvert.vert  point_light.frag  point_light.vert  skybox.frag  skybox.vert  tone_map.frag  tone_map.vert  vert.vert
res/shaders/SpirV/: basic_shader.frag.spv  basic_shader.vert.spv  frag.frag.spv  glTFfrag.frag.spv  glTFvert.vert.spv  point_light.frag.spv  point_light.vert.spv  skybox.frag.spv  skybox.vert.spv  tone_map.frag.spv  tone_map.vert.spv  vert.vert.spv
src/: main.cpp
src/AppCore/: _vkCore.cpp  _vkCore.h  vk_assetManager.cpp  vk_assetManager.h  vk_core.cpp  vk_core.h  vk_scene.cpp  vk_scene.h  vk_window.cpp  vk_window.h
src/Common/: vkc_types.h
src/Game/: vk_component.h  vk_game.cpp  vk_game.h  vk_gameObject.cpp  vk_gameObject.h  vk_player.cpp  vk_player.h  vk_scene.cpp  vk_scene.h
src/Game/Camera/: vk_camera.cpp  vk_camera.h
src/Game/Input/: vk_input.cpp  vk_input.h  vk_input_controller.h
src/IMCommon/: vk_types.h  vkc_types.h
src/Renderer/: vk_buffer.cpp  vk_buffer.h  vk_descriptorManager.cpp  vk_descriptorManager.h  vk_renderer.cpp  vk_renderer.h
src/Renderer/RendererSystems/: vk_basicRenderSystem.cpp  vk_basicRenderSystem.h  vk_deferredGeomRenderSystem.cpp  vk_deferredGeomRenderSystem.h  vk_glTFRenderSystem.cpp  vk_glTFRenderSystem.h  vk_pointLightSystem.cpp  vk_pointLightSystem.h  vk_renderSystem.h  vk_renderSystemManager.cpp  vk_renderSystemManager.h  vk_skyboxRenderSystem.cpp  vk_skyboxRenderSystem.h  vk_toneMapRenderSystem.cpp  vk_toneMapRenderSystem.h
src/Renderer/Types/: GBuffer.cpp  GBuffer.h  OffscreenPass.cpp  OffscreenPass.h  vk_basicRenderSystem.cpp  vk_basicRenderSystem.h  vk_pointLightSystem.cpp  vk_pointLightSystem.h  vk_renderSystem.h  vk_textureRenderSystem.cpp  vk_textureRenderSystem.h
src/Utils/: vkc_utils.h
src/VK_abstraction/: vk_IModel.hpp  vk_buffer.cpp  vk_buffer.h  vk_camera.cpp  vk_camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_frameInfo.h  vk_gameObject.cpp  vk_gameObject.h  vk_glTFModel.cpp  vk_glTFModel.h  vk_initializers.cpp  vk_initializers.h  vk_input.cpp  vk_input.h  vk_model.cpp  vk_model.h  vk_obj_model.cpp  vk_obj_model.h  vk_pipeline.cpp  vk_pipeline.h  vk_swapchain.cpp  vk_swapchain.h  vk_texture.cpp  vk_texture.h  vk_tools.cpp  vk_tools.h
